--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,16 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 
 .contact__container {
+  margin: 10px;
   font-family: Caveat;
-  font-size: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
+  font-size: 16px;
   border: 1px solid black;
 
-  padding: 40px 170px 40px 40px;
+  padding: 20px;
 }
 .main__title {
 }
@@ -18,4 +14,24 @@
   font-size: 30px;
   margin-bottom: 10px;
   margin-top: 10px;
+}
+
+@media screen and (min-width: 1080px) {
+  .view {
+      min-width: 600px;
+  }
+
+  .contact__container {
+  font-size: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+    margin:0;
+
+  padding: 40px 170px 40px 40px;
+  }
+
+ 
 }
