--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,8 +1,10 @@
 .contacts__list__container {
+  margin-top: 20px;
   height: 300px;
   overflow: scroll;
   overflow-x: hidden;
   width: 400px;
+  padding:20px;
 }
 
 ul {
@@ -24,11 +26,17 @@ li {
   margin: 0;
   padding: 0;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 li > p {
   margin-right: 20px;
 }
+
+@media screen and (min-width: 1080px) {
+  li {
+    display: flex;
+  }
+
+ 
+}
+
